glottis node created but lf wave is broken

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
         <title>Viardot</title>
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="mobile-web-app-capable" content="yes">
+        <link rel="stylesheet" href="style.css">
     </head>
 
-    <body style="margin: 0; padding: 0; background-color:white">
-
-        <canvas id="tractCanvas" width="600" height="600"/>
-        <script type="module" src="main.js"></script>
-    
+    <body>
+      <input placeholder="Enter transcription text" name="word"/>
+      <p id="values"></p>
+      <script type="module" src="main.js"></script>
     </body>
 </html>
