--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
-<html>
-    <head>
-        <title>Viardot</title>
-        <meta name="apple-mobile-web-app-capable" content="yes">
-        <meta name="mobile-web-app-capable" content="yes">
-        <link rel="stylesheet" href="style.css">
-    </head>
-
-    <body>
-      <input placeholder="Enter transcription text" name="word"/>
-      <p id="values"></p>
-      <script type="module" src="main.js"></script>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite App</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
